add server connection